Update benchmarks and add hashsmith to benchmarks.