@@ -1,7 +1,7 @@
 package io.github.sooniln.fastcollect
 
+import io.github.bluuewhale.hashsmith.SwissMap
 import io.github.sooniln.fastcollect.ints.Int2IntHashMap
-import io.github.sooniln.fastcollect.ints.IntHashSet
 import it.unimi.dsi.fastutil.ints.Int2IntOpenHashMap
 import it.unimi.dsi.fastutil.ints.IntOpenHashSet
 import korlibs.datastructure.IntIntMap
@@ -11,138 +11,101 @@ import org.openjdk.jmh.annotations.Fork
 import org.openjdk.jmh.annotations.Level
 import org.openjdk.jmh.annotations.Measurement
 import org.openjdk.jmh.annotations.Mode
+import org.openjdk.jmh.annotations.OperationsPerInvocation
 import org.openjdk.jmh.annotations.OutputTimeUnit
 import org.openjdk.jmh.annotations.Param
 import org.openjdk.jmh.annotations.Scope
 import org.openjdk.jmh.annotations.Setup
 import org.openjdk.jmh.annotations.State
 import org.openjdk.jmh.annotations.Warmup
+import org.openjdk.jmh.infra.Blackhole
+import org.openjdk.jmh.infra.IterationParams
 import java.util.concurrent.TimeUnit
 import kotlin.random.Random
 
 /**
  * A JVM specific benchmark which measures the performance of various map libraries.
  */
-@Fork(1)
+@Fork(1, jvmArgsAppend = ["--add-modules", "jdk.incubator.vector"])
 @Warmup(iterations = 3, time = 1, timeUnit = TimeUnit.SECONDS)
 @Measurement(iterations = 5, time = 2, timeUnit = TimeUnit.SECONDS)
 @BenchmarkMode(Mode.AverageTime)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
 open class MapBenchmark {
 
+    companion object {
+        private fun generateRandomInOutKeys(rnd: Random, inKeys: IntArray, outKeys: IntArray) {
+            check(inKeys.size == outKeys.size)
+
+            val inSet = IntOpenHashSet(inKeys.size)
+            while (inSet.size < inKeys.size) {
+                val key = rnd.nextInt()
+                if (!inSet.contains(key)) {
+                    inKeys[inSet.size] = key
+                    inSet.add(key)
+                }
+            }
+
+            var i = 0
+            while (i < inKeys.size) {
+                val r = rnd.nextInt()
+                if (!inSet.contains(r)) {
+                    outKeys[i++] = r
+                }
+            }
+        }
+    }
+
     @Suppress("NOTHING_TO_INLINE")
     @State(Scope.Benchmark)
     open class ReadState {
-        private val rnd = Random(123)
+        protected val rnd = Random(101)
 
-        @Param("16", "100", "10000", "1000000")
-        var size: Int = 0
+        //@Param("seqLow", "seqHigh", "random", "evenLow", "evenHigh", "partitionLow", "partitionHigh", "highBits")
+        var order: String = "random"
 
-        lateinit var kds: IntIntMap
-        lateinit var fastutil: Int2IntOpenHashMap
-        lateinit var fastcollect: Int2IntHashMap
-        lateinit var jvm: HashMap<Int, Int>
+        @Param("12000", "192000", "1536000", "6272000")
+        open var size: Int = 6272000
 
         var index = 0
         lateinit var inKeys: IntArray
         lateinit var outKeys: IntArray
 
-        @Setup(Level.Trial)
-        fun setupTrial() {
-            kds = IntIntMap(size)
-            fastutil = Int2IntOpenHashMap(size)
-            fastcollect = Int2IntHashMap(size)
-            jvm = HashMap(size)
+        lateinit var fastcollect: Int2IntHashMap
+        lateinit var fastutil: Int2IntOpenHashMap
+        lateinit var hashsmith: SwissMap<Int, Int>
+        lateinit var kds: IntIntMap
+        lateinit var kotlin: HashMap<Int, Int>
 
+        private fun generateInOutKeys(size: Int) {
             inKeys = IntArray(size)
             outKeys = IntArray(size)
 
-            repeat(size) { i ->
-                val key = rnd.nextInt()
-                val value = rnd.nextInt()
-                kds[key] = value
-                fastutil[key] = value
-                fastcollect[key] = value
-                jvm[key] = value
-                inKeys[i] = key
-            }
-
-            var i = 0
-            while (i < size) {
-                val r = rnd.nextInt(size * 10)
-                if (!fastcollect.containsKey(r)) {
-                    outKeys[i++] = r
-                }
-            }
+            generateRandomInOutKeys(rnd, inKeys, outKeys)
         }
-
-        @Setup(Level.Iteration)
-        fun setupIteration() {
-            index = 0
-        }
-
-        inline fun nextIndex(): Int {
-            val i  = index
-            if (index == inKeys.size - 1) {
-                index = 0
-            } else {
-                index++
-            }
-            return i
-        }
-
-        inline fun nextInElement() = inKeys[nextIndex()]
-        inline fun nextOutElement() = outKeys[nextIndex()]
-    }
-
-    @Suppress("NOTHING_TO_INLINE")
-    @State(Scope.Benchmark)
-    open class PutHitState {
-        private val rnd = Random(123)
-
-        @Param("16", "100", "10000", "1000000")
-        var size: Int = 0
-
-        lateinit var kds: IntIntMap
-        lateinit var fastutil: Int2IntOpenHashMap
-        lateinit var fastcollect: Int2IntHashMap
-        lateinit var jvm: HashMap<Int, Int>
-
-        var index = 0
-        lateinit var inKeys: IntArray
 
         @Setup(Level.Trial)
         fun setupTrial() {
-            val inSet = IntHashSet(size)
-            inKeys = IntArray(size)
+            generateInOutKeys(size)
 
-            repeat(size) { i ->
-                val key = rnd.nextInt()
-                inKeys[i] = key
-                inSet.add(key)
-            }
+            fastcollect = Int2IntHashMap(size).apply { for (key in inKeys) set(key, key) }
+            fastutil = Int2IntOpenHashMap(size).apply { for (key in inKeys) set(key, key) }
+            hashsmith = SwissMap<Int, Int>(size).apply { for (key in inKeys) set(key, key) }
+            kds = IntIntMap(size).apply { for (key in inKeys) set(key, key) }
+            kotlin = HashMap<Int, Int>(size).apply { for (key in inKeys) set(key, key) }
         }
 
         @Setup(Level.Iteration)
-        fun setupIteration() {
-            kds = IntIntMap(size)
-            fastutil = Int2IntOpenHashMap(size)
-            fastcollect = Int2IntHashMap(size)
-            jvm = HashMap(size)
-
-            for (key in inKeys) {
-                val value = rnd.nextInt()
-                kds[key] = value
-                fastutil[key] = value
-                fastcollect[key] = value
-                jvm[key] = value
+        open fun setupIteration(params: IterationParams) {
+            if (params.batchSize > inKeys.size) {
+                generateInOutKeys(params.batchSize)
             }
 
             index = 0
         }
 
         inline fun nextIndex(): Int {
-            val i  = index
+            val i = index
             if (index == inKeys.size - 1) {
                 index = 0
             } else {
@@ -151,193 +114,289 @@ open class MapBenchmark {
             return i
         }
 
-        inline fun nextInKey() = inKeys[nextIndex()]
+        inline fun nextInKey() = inKeys[index++]
+        inline fun nextOutKey() = outKeys[index++]
+        inline fun nextWrappingInKey() = inKeys[nextIndex()]
+        inline fun nextWrappingOutKey() = outKeys[nextIndex()]
+    }
+
+    @State(Scope.Benchmark)
+    open class EmptyState: ReadState() {
+        @Setup(Level.Iteration)
+        override fun setupIteration(params: IterationParams) {
+            super.setupIteration(params)
+            fastcollect.clear()
+            fastutil.clear()
+            kds.clear()
+            kotlin.clear()
+        }
     }
 
     @Benchmark
-    fun fastcollectGetHit(s: ReadState) = s.fastcollect.lookup(s.nextInElement())
+    fun fastcollectGetHit(s: ReadState) = s.fastcollect.lookup(s.nextWrappingInKey())
 
     @Benchmark
-    fun fastcollectGetMiss(s: ReadState) = s.fastcollect.lookup(s.nextOutElement())
+    fun fastcollectGetMiss(s: ReadState) = s.fastcollect.lookup(s.nextWrappingOutKey())
 
     @Benchmark
-    fun fastcollectPutHit(s: PutHitState) { s.fastcollect[s.nextInKey()] = 1 }
+    fun fastcollectPutHit(s: ReadState) {
+        val k = s.nextWrappingInKey()
+        s.fastcollect[k] = k
+    }
 
+    @OperationsPerInvocation(5000000)
+    @Warmup(iterations = 10, batchSize = 5000000)
+    @Measurement(iterations = 20, batchSize = 5000000)
+    @BenchmarkMode(Mode.SingleShotTime)
     @Benchmark
-    fun fastcollectIterateKeys(s: ReadState): Int {
-        var c = 0
+    fun fastcollectPutMiss(s: EmptyState) {
+        val k = s.nextInKey()
+        s.fastcollect[k] = k
+    }
+
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun fastcollectGrow(s: ReadState) = Int2IntHashMap().apply { repeat(s.size) { set(s.inKeys[it], s.inKeys[it]) } }
+
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun fastcollectIterateKeys(s: ReadState, bh: Blackhole) {
         for (e in s.fastcollect.keys) {
-            c += e
+            bh.consume(e)
         }
-        return c
     }
 
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
     @Benchmark
-    fun fastcollectIterateValues(s: ReadState): Int {
-        var c = 0
+    fun fastcollectIterateValues(s: ReadState, bh: Blackhole) {
         for (e in s.fastcollect.values) {
-            c += e
+            bh.consume(e)
         }
-        return c
     }
 
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
     @Benchmark
-    fun fastcollectIterate(s: ReadState): Int {
-        var c = 0
-        for (e in s.fastcollect.iterator()) {
-            c += e.key() + e.value()
+    fun fastcollectIterate(s: ReadState, bh: Blackhole) {
+        for (e in s.fastcollect) {
+            bh.consume(e)
         }
-        return c
     }
 
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
     @Benchmark
-    fun fastcollectIterateFast(s: ReadState): Int {
-        var c = 0
+    fun fastcollectIterateFast(s: ReadState, bh: Blackhole) {
         for (e in s.fastcollect.fastIterator()) {
-            c += e.key() + e.value()
+            bh.consume(e)
         }
-        return c
     }
 
     @Benchmark
-    fun kdsGetHit(s: ReadState) = s.kds[s.nextInElement()]
+    fun fastutilGetHit(s: ReadState) = s.fastutil.get(s.nextWrappingInKey())
 
     @Benchmark
-    fun kdsGetMiss(s: ReadState) = s.kds[s.nextOutElement()]
+    fun fastutilGetMiss(s: ReadState) = s.fastutil.get(s.nextWrappingOutKey())
 
     @Benchmark
-    fun kdsPutHit(s: PutHitState) { s.kds[s.nextInKey()] = 1 }
-
-    @Benchmark
-    fun kdsIterateKeys(s: ReadState): Int {
-        var c = 0
-        for (e in s.kds.keys) {
-            c += e
-        }
-        return c
+    fun fastutilPutHit(s: ReadState) {
+        val k = s.nextWrappingInKey()
+        s.fastutil[k] = k
     }
 
+    @OperationsPerInvocation(5000000)
+    @Warmup(iterations = 10, batchSize = 5000000)
+    @Measurement(iterations = 20, batchSize = 5000000)
+    @BenchmarkMode(Mode.SingleShotTime)
     @Benchmark
-    fun kdsIterateValues(s: ReadState): Int {
-        var c = 0
-        for (e in s.kds.values) {
-            c += e
-        }
-        return c
+    fun fastutilPutMiss(s: EmptyState) {
+        val k = s.nextInKey()
+        s.fastutil[k] = k
     }
 
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
     @Benchmark
-    fun kdsIterate(s: ReadState): Int {
-        var c = 0
-        for (e in s.kds.entries.iterator()) {
-            c += e.key + e.value
-        }
-        return c
-    }
+    fun fastutilGrow(s: ReadState) = Int2IntOpenHashMap().apply { repeat(s.size) { set(s.inKeys[it], s.inKeys[it]) } }
 
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
     @Benchmark
-    fun fastutilGetHit(s: ReadState) = s.fastutil.get(s.nextInElement())
-
-    @Benchmark
-    fun fastutilGetMiss(s: ReadState): Int = s.fastutil.get(s.nextOutElement())
-
-    @Benchmark
-    fun fastutilPutHit(s: PutHitState) { s.fastutil[s.nextInKey()] = 1}
-
-    @Benchmark
-    fun fastutilIterateKeys(s: ReadState): Int {
-        var c = 0
+    fun fastutilIterateKeys(s: ReadState, bh: Blackhole) {
         val it = s.fastutil.keys.iterator()
         while (it.hasNext()) {
-            c += it.nextInt()
+            bh.consume(it.nextInt())
         }
-        return c
     }
 
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
     @Benchmark
-    fun fastutilIterateValues(s: ReadState): Int {
-        var c = 0
+    fun fastutilIterateValues(s: ReadState, bh: Blackhole) {
         val it = s.fastutil.values.iterator()
         while (it.hasNext()) {
-            c += it.nextInt()
+            bh.consume(it.nextInt())
         }
-        return c
     }
 
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
     @Benchmark
-    fun fastutilIterate(s: ReadState): Int {
-        var c = 0
+    fun fastutilIterate(s: ReadState, bh: Blackhole) {
         for (e in s.fastutil.int2IntEntrySet()) {
-            c += e.intKey + e.intValue
+            bh.consume(e)
         }
-        return c
     }
 
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
     @Benchmark
-    fun fastutilIterateFast(s: ReadState): Int {
-        var c = 0
+    fun fastutilIterateFast(s: ReadState, bh: Blackhole) {
         for (e in s.fastutil.int2IntEntrySet().fastIterator()) {
-            c += e.intKey + e.intValue
+            bh.consume(e)
         }
-        return c
     }
 
     @Benchmark
-    fun jvmGetHit(s: ReadState) = s.jvm[s.nextInElement()]
+    fun hashsmithGetHit(s: ReadState) = s.hashsmith[s.nextWrappingInKey()]
 
     @Benchmark
-    fun jvmGetMiss(s: ReadState) = s.jvm[s.nextOutElement()]
+    fun hashsmithGetMiss(s: ReadState) = s.hashsmith[s.nextWrappingOutKey()]
 
     @Benchmark
-    fun jvmPutHit(s: PutHitState) { s.jvm[s.nextInKey()] = 1}
+    fun hashsmithPutHit(s: ReadState) {
+        val k = s.nextWrappingInKey()
+        s.hashsmith[k] = k
+    }
 
+    @OperationsPerInvocation(5000000)
+    @Warmup(iterations = 10, batchSize = 5000000)
+    @Measurement(iterations = 20, batchSize = 5000000)
+    @BenchmarkMode(Mode.SingleShotTime)
     @Benchmark
-    fun jvmIterateKeys(s: ReadState): Int {
-        var c = 0
-        for (e in s.jvm.keys) {
-            c += e
+    fun hashsmithPutMiss(s: EmptyState) {
+        val k = s.nextInKey()
+        s.hashsmith[k] = k
+    }
+
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun hashsmithGrow(s: ReadState) = SwissMap<Int, Int>().apply { repeat(s.size) { set(s.inKeys[it], s.inKeys[it]) } }
+
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun hashsmithIterateKeys(s: ReadState, bh: Blackhole) {
+        for (e in s.hashsmith.keys) {
+            bh.consume(e)
         }
-        return c
+    }
+
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun hashsmithIterateValues(s: ReadState, bh: Blackhole) {
+        for (e in s.hashsmith.values) {
+            bh.consume(e)
+        }
+    }
+
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun hashsmithIterate(s: ReadState, bh: Blackhole) {
+        for (e in s.hashsmith) {
+            bh.consume(e)
+        }
     }
 
     @Benchmark
-    fun jvmIterateValues(s: ReadState): Int {
-        var c = 0
-        for (e in s.jvm.values) {
-            c += e
+    fun kdsGetHit(s: ReadState) = s.kds[s.nextWrappingInKey()]
+
+    @Benchmark
+    fun kdsGetMiss(s: ReadState) = s.kds[s.nextWrappingOutKey()]
+
+    @Benchmark
+    fun kdsPutHit(s: ReadState) {
+        val k = s.nextWrappingInKey()
+        s.kds[k] = k
+    }
+
+    @OperationsPerInvocation(5000000)
+    @Warmup(iterations = 10, batchSize = 5000000)
+    @Measurement(iterations = 20, batchSize = 5000000)
+    @BenchmarkMode(Mode.SingleShotTime)
+    @Benchmark
+    fun kdsPutMiss(s: EmptyState) {
+        val k = s.nextInKey()
+        s.kds[k] = k
+    }
+
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun kdsGrow(s: ReadState) = IntIntMap().apply { repeat(s.size) { set(s.inKeys[it], s.inKeys[it]) } }
+
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun kdsIterateKeys(s: ReadState, bh: Blackhole) {
+        for (e in s.kds.keys) {
+            bh.consume(e)
         }
-        return c
+    }
+
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun kdsIterateValues(s: ReadState, bh: Blackhole) {
+        for (e in s.kds.values) {
+            bh.consume(e)
+        }
+    }
+
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun kdsIterate(s: ReadState, bh: Blackhole) {
+        for (e in s.kds.entries) {
+            bh.consume(e)
+        }
     }
 
     @Benchmark
-    fun jvmIterate(s: ReadState): Int {
-        var c = 0
-        for (e in s.jvm) {
-            c += e.key + e.value
-        }
-        return c
-    }
+    fun kotlinGetHit(s: ReadState) = s.kotlin[s.nextWrappingInKey()]
 
     @Benchmark
-    fun insertAndReinsertTimings() {
-        val n = 500000
+    fun kotlinGetMiss(s: ReadState) = s.kotlin[s.nextWrappingOutKey()]
 
-        val insertStart = System.nanoTime()
-        val one = IntHashSet(n)
-        for (i in 1..n) {
-            one.add(i)
+    @Benchmark
+    fun kotlinPutHit(s: ReadState) {
+        val k = s.nextWrappingInKey()
+        s.kotlin[k] = k
+    }
+
+    @OperationsPerInvocation(5000000)
+    @Warmup(iterations = 10, batchSize = 5000000)
+    @Measurement(iterations = 20, batchSize = 5000000)
+    @BenchmarkMode(Mode.SingleShotTime)
+    @Benchmark
+    fun kotlinPutMiss(s: EmptyState) {
+        val k = s.nextInKey()
+        s.kotlin[k] = k
+    }
+
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun kotlinGrow(s: ReadState) = HashMap<Int, Int>().apply { repeat(s.size) { set(s.inKeys[it], s.inKeys[it]) } }
+
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun kotlinIterateKeys(s: ReadState, bh: Blackhole) {
+        for (e in s.kotlin.keys) {
+            bh.consume(e)
         }
-        val insertEnd = System.nanoTime()
+    }
 
-        val reinsertStart = System.nanoTime()
-        val two = IntHashSet(n/2)
-        for (e in one) {
-            two.add(e)
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun kotlinIterateValues(s: ReadState, bh: Blackhole) {
+        for (e in s.kotlin.values) {
+            bh.consume(e)
         }
-        val reinsertEnd = System.nanoTime()
+    }
 
-        val insertMs = (insertEnd - insertStart) / 1000000.0
-        val reinsertMs = (reinsertEnd - reinsertStart) / 1000000.0
-        System.out.printf("insert %,d entries: %.2f ms, reinsert: %.2f ms%n", n, insertMs, reinsertMs)
+    @OutputTimeUnit(TimeUnit.MILLISECONDS)
+    @Benchmark
+    fun kotlinIterate(s: ReadState, bh: Blackhole) {
+        for (e in s.kotlin.entries) {
+            bh.consume(e)
+        }
     }
 }
